syntax = "proto3";

option java_multiple_files = true;
package com.archforce.ath.rds.grpc.proto;

message Person {
  string first_name = 1;
  string last_name = 2;
}

message Greeting {
  string message = 1;
}

message A1 {
  int32 a = 1;
  int32 b = 2;
}

message A2 {
  int32 message = 1;
}

message A3 {
  repeated int32 i = 1;
}

service HelloWorldService {
  rpc sayHello (Person) returns (Greeting);
  rpc addOperation (A1) returns (A2);
  rpc addOperation1 (A3) returns (A2);
}